--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@capacitor/haptics": "6.0.0",
     "@capacitor/keyboard": "6.0.0",
     "@capacitor/status-bar": "6.0.0",
+    "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.4",
     "@ionic/angular": "^8.0.0",
     "firebase": "^10.11.1",
     "ionicons": "^7.0.0",
