Foto de Doctores y Busqueda

--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.4",
     "@ionic/angular": "^8.0.0",
     "@ionic/pwa-elements": "^3.2.2",
+    "@types/leaflet": "^1.9.12",
     "firebase": "^10.11.1",
     "ionicons": "^7.0.0",
+    "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
